# hn-watcher

./: .gitignore  README.md  docker-compose.yml  hn_watcher.toml  justfile  plan.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  test-sysd.yml
hn_watcher/: __main__.py  config.py  context.py  db.py  hn.py  models.py  publisher.py  workflow.py
scripts/: manage_systemd.sh  run_hn_watcher_now.sh  setup_systemd.sh  view_hn_watcher_logs.sh
tests/: conftest.py  test_db.py  test_publisher.py  test_workflow.py
tools/sysd/: README.md  pyproject.toml  pytest.ini  test.sh
tools/sysd/sysd/: __init__.py  __main__.py  manager.py
tools/sysd/sysd/templates/: service.j2  timer.j2
tools/sysd/tests/: __init__.py  test_integration.py  test_unit.py
