[project]
name = "hn-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "avro>=1.12.0",
    "avro-python3>=1.10.2",
    "datamodel-code-generator>=0.28.5",
    "fire>=0.7.0",
    "mypy>=1.15.0",
    "pika>=1.3.2",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "toml>=0.10.2",
    "types-pika>=1.2.0b1",
    "types-requests>=2.32.0.20250328",
    "types-toml>=0.10.8.20240310",
]
